# wgpu-practice-ground

./: .gitignore  Cargo.toml  README.md
assets/model/: Bunny-LowPoly.json
examples/empty_window/: Cargo.toml
examples/empty_window/src/: lib.rs  window_app.rs
gpgpu/compute_bitonic_sort/: Cargo.toml
gpgpu/compute_bitonic_sort/src/: compute.wgsl  lib.rs
image_processing/image_average_filter/: Cargo.toml
image_processing/image_average_filter/src/: blur.wgsl  lib.rs
image_processing/image_averaging_filter/: Cargo.toml
image_processing/image_averaging_filter/src/: blur.wgsl  lib.rs
image_processing/image_blur/: Cargo.toml
image_processing/image_blur/src/: blur.wgsl  fullscreen-textured-quad.wgsl  instance_defs.rs  lib.rs
image_processing/image_gaussian_filter/: Cargo.toml
image_processing/image_gaussian_filter/src/: blur.wgsl  fullscreen-textured-quad.wgsl  lib.rs
instanced_cube_sphere_torus/base/: Cargo.toml
instanced_cube_sphere_torus/base/src/: lib.rs  shader-vert.wgsl
instanced_cube_sphere_torus/direction_light_1/: Cargo.toml
instanced_cube_sphere_torus/direction_light_1/src/: instance_defs.rs  lib.rs  shader-frag.wgsl
instanced_cube_sphere_torus/direction_light_2/: Cargo.toml
instanced_cube_sphere_torus/direction_light_2/src/: lib.rs  light_defs.rs  shader-frag.wgsl
lib/wgpu_helper/: Cargo.toml
lib/wgpu_helper/src/: binding.rs  buffer.rs  context.rs  lib.rs  model.rs  transforms.rs  uniform.rs  wgpu_simplified.rs
lib/wgpu_helper/src/framework/: mod.rs  v1.rs  with_gif.rs
lib/wgpu_helper/src/vertex_data/: cube.rs  cylinder.rs  mod.rs  torus.rs
lib/wgsim/: Cargo.toml
lib/wgsim/src/: app.rs  ctx.rs  fps.rs  lib.rs  ppl.rs  render.rs  util.rs
lib/wgsim/src/compute/: pixel.rs
lib/wgsim/src/export/: gif.rs  mod.rs
lib/wgsim/src/geometry/: cylinder.rs  mod.rs  sphere.rs
lib/window_app/: Cargo.toml
lib/window_app/src/: action.rs  binding.rs  lib.rs  render.rs  state.rs
life-game/: Cargo.toml
practice/cube_blinn_phong/: Cargo.toml
practice/cube_blinn_phong/src/: app.rs  blinn-phong-frag.wgsl  lib.rs  render.rs  shader-vert.wgsl
practice/instanced_cube_sphere_torus/: Cargo.toml
practice/instanced_cube_sphere_torus/src/: lib.rs  shader-frag.wgsl
practice/low_poly_stanford_bunny/: Cargo.toml
practice/low_poly_stanford_bunny/src/: lib.rs
practice/rotate_cube_basic/: Cargo.toml
prototype/rect-renderer/: Cargo.toml
prototype/rect-renderer/src/: app.rs  color.rs  geometry_value.rs  lib.rs  renderer.rs  state.rs
prototype/rect-renderer/src/shader/: rect.wgsl
prototype/text-renderer/: Cargo.toml
prototype/text-renderer/src/: app.rs  atlas.rs  lib.rs  lookup.rs  renderer.rs  sdf.rs  state.rs
prototype/text-renderer/src/shader/: text.wgsl
prototype/with_gif/: Cargo.toml
prototype/with_gif/src/: lib.rs  shader-frag.wgsl  shader-vert.wgsl
shader_art/shader_step_rect/: Cargo.toml
shader_art/shader_step_rect/src/: compute.wgsl  lib.rs
src/: main.rs
tutorial/ch01-window/: Cargo.toml
tutorial/ch01-window/src/: lib.rs
tutorial/ch02-surface/: Cargo.toml
tutorial/ch02-surface/src/: app.rs  lib.rs  state.rs
tutorial/ch03-pipeline/: Cargo.toml
tutorial/ch03-pipeline/src/: app.rs  lib.rs  shader.wgsl  state.rs
tutorial/ch04-buffer/: Cargo.toml
tutorial/ch04-buffer/src/: app.rs  lib.rs  shader.wgsl  state.rs  vertex.rs
tutorial/ch05-indice/: Cargo.toml
tutorial/ch05-indice/src/: app.rs  lib.rs  state.rs  vertex.rs
tutorial/ch06-texture/: Cargo.toml
tutorial/ch06-texture/src/: app.rs  lib.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
tutorial/ch06-texture/src/shader/: shader.wgsl
tutorial/compute_atomic_add/: Cargo.toml
tutorial/compute_atomic_add/src/: lib.rs
tutorial/compute_mandelbrot_set/: Cargo.toml
tutorial/compute_mandelbrot_set/src/: compute.wgsl  lib.rs
tutorial/compute_single_thread/: Cargo.toml
tutorial/compute_single_thread/src/: compute.wgsl  lib.rs
tutorial/compute_texture_grid/: Cargo.toml
tutorial/compute_texture_grid/src/: compute.wgsl  lib.rs
tutorial/compute_visualize_workgroup_global/: Cargo.toml
tutorial/compute_visualize_workgroup_global/src/: lib.rs
tutorial/compute_visualize_workgroup_local/: Cargo.toml
tutorial/compute_visualize_workgroup_local/src/: compute.wgsl  lib.rs
tutorial/glyph_geometry_2d/: Cargo.toml
tutorial/glyph_geometry_2d/src/: font_data.rs  glyph_2d.wgsl  lib.rs
tutorial/hello-glyphon/: Cargo.toml
tutorial/hello-glyphon/src/: app.rs  lib.rs  state.rs  text.rs
tutorial/life-game/: Cargo.toml
tutorial/life-game/src/: app.rs  gif.rs  lib.rs  renderer.rs  state.rs  vertex.rs
tutorial/life-game/src/shader/: cell.wgsl  main.wgsl  simulation.wgsl
with_gif/life_game/: Cargo.toml
with_gif/life_game/src/: lib.rs
with_gif/life_game/src/shader/: render.wgsl  simulation.wgsl
