[package]
name    = "wgpu-practice-ground"
version = "0.1.0"
edition = "2021"

[dependencies]
ch01-window   = { path = "./tutorial/ch01-window" }
ch02-surface  = { path = "./tutorial/ch02-surface" }
ch03-pipeline = { path = "./tutorial/ch03-pipeline" }
ch04-buffer   = { path = "./tutorial/ch04-buffer" }

[workspace]

members = [
  "tutorial/ch01-window",
  "tutorial/ch02-surface",
  "tutorial/ch03-pipeline",
  "tutorial/ch04-buffer",
]
