[package]
name    = "wgpu-practice-ground"
version = "0.1.0"
edition = "2021"

[dependencies]
ch01-window   = { path = "./tutorial/ch01-window" }
ch02-surface  = { path = "./tutorial/ch02-surface" }
ch03-pipeline = { path = "./tutorial/ch03-pipeline" }
ch04-buffer   = { path = "./tutorial/ch04-buffer" }
ch05-indice   = { path = "./tutorial/ch05-indice" }
ch06-texture  = { path = "./tutorial/ch06-texture" }
life-game     = { path = "./tutorial/life-game" }
hello-glyphon = { path = "./tutorial/hello-glyphon" }
rect-renderer = { path = "./prototype/rect-renderer" }

[workspace]

members = [
  "prototype/rect-renderer",
  "prototype/text-renderer",
  "tutorial/ch01-window",
  "tutorial/ch02-surface",
  "tutorial/ch03-pipeline",
  "tutorial/ch04-buffer",
  "tutorial/ch05-indice",
  "tutorial/ch06-texture",
  "tutorial/hello-glyphon",
  "tutorial/life-game",
]
