[package]
name    = "wgpu-practice-ground"
version = "0.1.0"
edition = "2021"

[dependencies]
ch01-window                                   = { path = "./tutorial/ch01-window" }
ch02-surface                                  = { path = "./tutorial/ch02-surface" }
ch03-pipeline                                 = { path = "./tutorial/ch03-pipeline" }
ch04-buffer                                   = { path = "./tutorial/ch04-buffer" }
ch05-indice                                   = { path = "./tutorial/ch05-indice" }
ch06-texture                                  = { path = "./tutorial/ch06-texture" }
life-game                                     = { path = "./tutorial/life-game" }
hello-glyphon                                 = { path = "./tutorial/hello-glyphon" }
compute_single_thread                         = { path = "./tutorial/compute_single_thread" }
compute_atomic_add                            = { path = "./tutorial/compute_atomic_add" }
compute_visualize_workgroup_global            = { path = "./tutorial/compute_visualize_workgroup_global" }
compute_visualize_workgroup_local             = { path = "./tutorial/compute_visualize_workgroup_local" }
rect-renderer                                 = { path = "./prototype/rect-renderer" }
text-renderer                                 = { path = "./prototype/text-renderer" }
with_gif                                      = { path = "./prototype/with_gif" }
with_gif_life_game                            = { path = "./with_gif/life_game" }
cube_blinn_phong                              = { path = "./practice/cube_blinn_phong" }
rotate_cube_basic                             = { path = "./practice/rotate_cube_basic" }
instanced_cube_sphere_torus_base              = { path = "./instanced_cube_sphere_torus/base" }
instanced_cube_sphere_torus_direction_light_1 = { path = "./instanced_cube_sphere_torus/direction_light_1" }
instanced_cube_sphere_torus_direction_light_2 = { path = "./instanced_cube_sphere_torus/direction_light_2" }
empty_window                                  = { path = "./examples/empty_window" }
pollster                                      = "0.3.0"

[workspace]

members = [
  "lib/window_app",
  "lib/wgpu_helper",
  "lib/wgsim",
  "prototype/rect-renderer",
  "prototype/text-renderer",
  "prototype/with_gif",
  "with_gif/life_game",
  "tutorial/ch01-window",
  "tutorial/ch02-surface",
  "tutorial/ch03-pipeline",
  "tutorial/ch04-buffer",
  "tutorial/ch05-indice",
  "tutorial/ch06-texture",
  "tutorial/hello-glyphon",
  "tutorial/life-game",
  "tutorial/compute_single_thread",
  "tutorial/compute_atomic_add",
  "tutorial/compute_visualize_workgroup_global",
  "tutorial/compute_visualize_workgroup_local",
  "practice/cube_blinn_phong",
  "practice/rotate_cube_basic",
  "instanced_cube_sphere_torus/base",
  "instanced_cube_sphere_torus/direction_light_1",
  "instanced_cube_sphere_torus/direction_light_2",
  "examples/empty_window",
]
