[package]
name    = "image_blur"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1.0.89"
bytemuck    = "1.19.0"
cgmath      = "0.18.0"
enum-rotate = "0.1.1"
env_logger  = "0.11.5"
wgpu        = "22.1.0"
wgsim       = { path = "../../lib/wgsim" }
pollster    = "0.3.0"
rand        = "0.8.5"
