[package]
name    = "instanced_cube_sphere_torus_direction_light_1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1.0.89"
bytemuck    = "1.19.0"
cgmath      = "0.18.0"
enum-rotate = "0.1.1"
env_logger  = "0.11.5"
wgpu        = "22.1.0"
winit       = "0.30.5"
wgpu_helper = { path = "../../lib/wgpu_helper" }
pollster    = "0.3.0"
rand        = "0.8.5"
